# yandex-practicum-streaming-quotes

./: Cargo.toml  README.md
.github/workflows/: general.yml
quote-client/: Cargo.toml  README.md
quote-client/src/: app.rs  args.rs  cancellation_token.rs  main.rs
quote-client/src/app/: cancellation_token.rs  error.rs  ping.rs  read_udp_response.rs  server_connect.rs
quote-server/: Cargo.toml  README.md
quote-server/src/: app.rs  args.rs  main.rs  stock_quote.rs  stock_quotes_generator.rs  tracing.rs
quote-server/src/app/: client_address.rs  error.rs  handler.rs  listen.rs  listener.rs  monitoring.rs  monitoring_router.rs  quote_streaming.rs  quotes_generator.rs  server_cancellation_token.rs  stock_quote.rs  stock_quotes_generator.rs  tickers_router.rs
quote-server/src/app/handler/: connection_handler.rs  error.rs  stream_quotes.rs
quote-server/src/app/listener/: connection_handler.rs  handler.rs
quote-server/src/app/monitoring/: monitoring_router.rs  ping.rs
quote-server/src/app/quote_streaming/: quotes_generator.rs  stream_quotes.rs  tickers_router.rs
quote-streaming/: Cargo.toml  README.md
quote-streaming/src/: bytes.rs  commands.rs  keep_alive.rs  lib.rs  request.rs  response.rs  stock_quote.rs
