[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
tracing = "0.1"
tracing-log = "0.2"
rkyv = { workspace = true }
quote-streaming = { path = "../quote-streaming" }
rancor = { workspace = true }
clap = { workspace = true }
thiserror = "2"
ctrlc = "3"
crossbeam-channel = "0.5"
chrono = { workspace = true }
