[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
tracing = "0.1"
tracing-log = "0.2"
quote-streaming = { path = "../quote-streaming" }
rancor = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = "0.5"
thiserror = { workspace = true }
